# h5wasm-cmake-demo

./: CMakeLists.txt
include/: H5pubconf.h
lib/: libhdf5.settings
lib/pkgconfig/: hdf5.pc  hdf5_cpp.pc  hdf5_hl.pc  hdf5_hl_cpp.pc
